--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "symfony/options-resolver":     "~2.1",
         "kriswallsmith/buzz":           "~0.7",
         "symfony/yaml":                 "~2.3",
-        "firebase/php-jwt":             "~1.1",
-        "adoy/oauth2":                  "~1.0"
+        "firebase/php-jwt":             "dev-master",
+        "adoy/oauth2":                  "dev-master"
     },
 
     "require-dev": {
