--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     auth0_jwt_auth.auth0_service:
         class: "Auth0\JWTAuthBundle\Security\Auth0Service"
-        arguments: [%auth0_jwt_auth.client_id%, %auth0_jwt_auth.client_secret%, %auth0_jwt_auth.domain%, , %auth0_jwt_auth.redirect_url%]
+        arguments: [%auth0_jwt_auth.client_id%, %auth0_jwt_auth.client_secret%, %auth0_jwt_auth.domain%
 
     auth0_jwt_auth.jwt_authenticator:
         class:     "Auth0\JWTAuthBundle\Security\JWTAuthenticator"
