--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,8 +1,8 @@
 services:
-    auth0_jwt_auth.auth0_service:
+    jwt_auth.auth0_service:
         class: "Auth0\JWTAuthBundle\Security\Auth0Service"
-        arguments: [%auth0_jwt_auth.client_id%, %auth0_jwt_auth.client_secret%, %auth0_jwt_auth.domain%]
+        arguments: [%jwt_auth.client_id%, %jwt_auth.client_secret%]
 
-    auth0_jwt_auth.jwt_authenticator:
+    jwt_auth.jwt_authenticator:
         class:     "Auth0\JWTAuthBundle\Security\JWTAuthenticator"
-        arguments: ["@auth0_jwt_auth.auth0_service"]
+        arguments: ["@jwt_auth.auth0_service"]
