--- a/example/app/config/security.yml
+++ b/example/app/config/security.yml
@@ -9,7 +9,7 @@ security:
             pattern: ^/api
             stateless: true
             simple_preauth:
-                authenticator: auth0_jwt_auth.jwt_authenticator
+                authenticator: jwt_auth.jwt_authenticator
 
     access_control:
             - { path: ^/api/unsecure, roles: IS_AUTHENTICATED_ANONYMOUSLY }
