--- a/example/app/config/config.yml
+++ b/example/app/config/config.yml
@@ -75,3 +75,4 @@ swiftmailer:
 jwt_auth:
     client_id:     KNuydwEqwGsPNpxdAhACmOWDUmBEZsLn
     client_secret: cQT57M1wIYvcW1Rr6lTGWitqlkBtYwsyYkHG-mhVKdxhXBATWDwM6tB0mJFJVWFv
+    domain: wptest.auth0.com
