--- a/example/composer.json
+++ b/example/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.6.*",
+        "symfony/symfony": "~2.8",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
@@ -18,7 +18,7 @@
         "sensio/distribution-bundle": "~3.0.12",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "auth0/jwt-auth-bundle": "~1.2.8"
+        "auth0/jwt-auth-bundle": "~1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
