upgrade to auth0php 4 + support for RS256 + optional base64 encoded secrets

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "~3.0",
-        "auth0/auth0-php": "~3.3"
+        "auth0/auth0-php": "^4.0.11"
     },
 
     "require-dev": {
