--- a/example/app/config/config_prod.yml
+++ b/example/app/config/config_prod.yml
@@ -1,10 +1,6 @@
 imports:
     - { resource: config.yml }
 
-#framework:
-#    validation:
-#        cache: apc
-
 #doctrine:
 #    orm:
 #        metadata_cache_driver: apc
@@ -14,12 +10,12 @@ imports:
 monolog:
     handlers:
         main:
-            type:         fingers_crossed
+            type: fingers_crossed
             action_level: error
-            handler:      nested
+            handler: nested
         nested:
-            type:  stream
-            path:  "%kernel.logs_dir%/%kernel.environment%.log"
+            type: stream
+            path: '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
         console:
-            type:  console
+            type: console
