--- a/composer.json
+++ b/composer.json
@@ -20,21 +20,24 @@
     ],
 
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "~3.0",
+        "php": "^5.5 || ^7.0",
+        "symfony/framework-bundle": "^2.8 || ~3.0",
         "auth0/auth0-php": "^5.0.3"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^5.1"
-    },
-
-    "suggest": {
+        "phpunit/phpunit": "^5.1",
+        "nyholm/symfony-bundle-test": "^1.0"
     },
 
     "autoload": {
         "psr-4": {
             "Auth0\\JWTAuthBundle\\": "src/"
+        }
+    }
+    "autoload-dev": {
+        "psr-4": {
+            "Auth0\\JWTAuthBundle\\": "Tests/"
         }
     }
 }
