--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,9 +1,14 @@
 services:
     jwt_auth.auth0_service:
-        class: "Auth0\\JWTAuthBundle\\Security\\Auth0Service"
-        arguments: ["%jwt_auth.api_secret%","%jwt_auth.domain%","%jwt_auth.api_identifier%","%jwt_auth.authorized_issuer%","%jwt_auth.secret_base64_encoded%", "%jwt_auth.supported_algs%"]
+        class: Auth0\JWTAuthBundle\Security\Auth0Service
+        arguments: ["%jwt_auth.api_secret%","%jwt_auth.domain%","%jwt_auth.api_identifier%","%jwt_auth.authorized_issuer%","%jwt_auth.secret_base64_encoded%", "%jwt_auth.supported_algs%", ~]
 
     jwt_auth.jwt_authenticator:
-        class:     "Auth0\\JWTAuthBundle\\Security\\JWTAuthenticator"
+        class:     Auth0\JWTAuthBundle\Security\JWTAuthenticator
         arguments: ["@jwt_auth.auth0_service"]
 
+    jwt_auth.cache.null:
+        class: Auth0\SDK\Helpers\Cache\NoCacheHandler
+
+    jwt_auth.cache.file_system:
+        class: Auth0\SDK\Helpers\Cache\FileSystemCacheHandler
