--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^5.1",
+        "phpunit/phpunit": "^4.8.36 || ^5.7.21",
         "nyholm/symfony-bundle-test": "^1.0"
     },
 
