--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 
     "require-dev": {
         "phpunit/phpunit": "^4.8.36 || ^5.7.21",
-        "nyholm/symfony-bundle-test": "^1.0.2"
+        "nyholm/symfony-bundle-test": "^1.0.2",
+        "symfony/security": "^4.1"
     },
 
     "autoload": {
