--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "phpunit/phpunit": "^4.8.36 || ^5.7.21",
         "nyholm/symfony-bundle-test": "^1.0.2",
         "symfony/framework-bundle": "^2.8 || ~3.3.0",
-        "symfony/security": "~3.3.0"
+        "symfony/security": "^2.8 || ~3.3.0"
     },
 
     "autoload": {
