--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 commands:
-  build-and-test:
+  prepare:
     parameters:
       symfony_version:
         type: string
@@ -11,7 +11,7 @@ commands:
       - run: composer require symfony/symfony:<< parameters.symfony_version >> --no-update
       - restore_cache:
           keys:
-            - composer-v1-{{ checksum "composer.lock" }}
+            - composer-v1-{{ checksum "composer.json" }}
             - composer-v1-
       - run: composer install -n --prefer-dist
       - run: composer update --prefer-dist --no-interaction
@@ -20,24 +20,31 @@ commands:
           paths:
             - composer.*
       - save_cache:
-          key: composer-v1-{{ checksum "composer.lock" }}
+          key: composer-v1-{{ checksum "composer.json" }}
           paths:
             - vendor
+  run-tests:
+    steps:
       - run: ./vendor/bin/phpunit --coverage-text --coverage-clover=build/coverage.xml
+      - run: 
+          command: bash <(curl -s https://codecov.io/bash)
+          when: on_success
 
 jobs: 
   php_5: 
     docker: 
       - image: circleci/php:5.6
     steps:
-      - build-and-test:
+      - prepare:
           symfony_version: 2.8.*
+      - run-tests
   php_7: 
     docker: 
       - image: circleci/php:7.1
     steps:
-      - build-and-test:
+      - prepare:
           symfony_version: 3.3.*
+      - run-tests
   snyk:
     docker:
       - image: snyk/snyk-cli:composer
