--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name":        "auth0/jwt-auth-bundle",
     "type":        "symfony-bundle",
-    "description": "Support for authenticating users with a JWT in Symfony.",
+    "description": "Support for authenticating users with a JWT in Symfony 4",
     "keywords":    [
         "authentication",
         "firewall",
@@ -11,12 +11,7 @@
     ],
     "homepage": "http://github.com/auth0/jwt-auth-bundle",
     "license": "MIT",
-
     "authors": [
-        {
-            "name": "Germán Lena",
-            "email": "german@auth0.com"
-        },
         {
             "name": "Josh Cunningham",
             "email": "josh.cunningham@auth0.com"
@@ -24,16 +19,15 @@
     ],
 
     "require": {
-        "php": "^5.5 || ^7.0",
-        "symfony/framework-bundle": "^2.8 || ~3.0 || ~4.0",
-        "auth0/auth0-php": "^5.2"
+        "php": "^7.1",
+        "symfony/framework-bundle": "^4.0",
+        "auth0/auth0-php": "^5.4"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^4.8.36 || ^5.7.21",
-        "nyholm/symfony-bundle-test": "^1.0.2",
-        "symfony/framework-bundle": "^2.8 || ~3.3.0",
-        "symfony/security": "^2.8 || ~3.3.0"
+        "phpunit/phpunit": "^7.0",
+        "nyholm/symfony-bundle-test": "^1.0",
+        "symfony/security": "^4.0"
     },
 
     "autoload": {
