--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -12,3 +12,8 @@ services:
 
     jwt_auth.cache.file_system:
         class: Auth0\SDK\Helpers\Cache\FileSystemCacheHandler
+
+    jwt_auth.security.guard.jwt_guard_authenticator:
+        class: Auth0\JWTAuthBundle\Security\Guard\JwtGuardAuthenticator
+        arguments:
+            - "@jwt_auth.auth0_service"
