Add Symfony user provider for use with basic JWT authentication implementations

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -17,3 +17,6 @@ services:
         class: Auth0\JWTAuthBundle\Security\Guard\JwtGuardAuthenticator
         arguments:
             - "@jwt_auth.auth0_service"
+
+    jwt_auth.security.user.jwt_user_provider:
+        class: Auth0\JWTAuthBundle\Security\User\JwtUserProvider
