--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -3,6 +3,9 @@ services:
         class: Auth0\JWTAuthBundle\Security\Auth0Service
         arguments: ["%jwt_auth.api_secret%","%jwt_auth.domain%","%jwt_auth.api_identifier%","%jwt_auth.authorized_issuer%","%jwt_auth.secret_base64_encoded%", "%jwt_auth.supported_algs%", ~]
 
+    Auth0\JWTAuthBundle\Security\Auth0Service:
+        alias: jwt_auth.auth0_service
+
     jwt_auth.jwt_authenticator:
         class:     Auth0\JWTAuthBundle\Security\JWTAuthenticator
         arguments: ["@jwt_auth.auth0_service"]
