--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,11 @@ commands:
       - run: sudo composer self-update
       - restore_cache:
           keys:
-            - composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.json" }}
+            - composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.lock" }}
             - composer-v1-{{ .Environment.CIRCLE_JOB }}
-      - run: composer install -n --prefer-dist
-      - persist_to_workspace:
-          root: .
-          paths:
-            - composer.*
-            - .snyk
+      - run: composer install --no-interaction --prefer-dist
       - save_cache:
-          key: composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.json" }}
+          key: composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.lock" }}
           paths:
             - vendor
   run-tests:
@@ -39,20 +34,6 @@ jobs:
     steps:
       - prepare
       - run-tests
-  snyk:
-    docker:
-      - image: snyk/snyk-cli:composer
-    steps:
-      - attach_workspace:
-          at: .
-      - run: snyk test
-      - run:
-          command: |
-            if [[ "${CIRCLE_BRANCH}" == "master" ]]
-            then
-            snyk monitor --org=auth0-sdks
-            fi
-          when: always
 
 #Each workflow represents a Github check
 workflows:
@@ -62,11 +43,3 @@ workflows:
   build_php_7:
     jobs:
       - php_7
-  snyk:
-    jobs:
-      - php_7
-      - snyk:
-          # Must define SNYK_TOKEN env
-          context: snyk-env 
-          requires: 
-            - php_7
