--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,21 @@
 {
-    "name":        "auth0/jwt-auth-bundle",
-    "type":        "symfony-bundle",
+    "name": "auth0/jwt-auth-bundle",
+    "type": "symfony-bundle",
     "description": "Support for authenticating users with a JWT in Symfony.",
-    "keywords":    [
+    "keywords": [
         "authentication",
         "firewall",
         "jwt",
         "security",
         "auth0"
     ],
+    "config": {
+        "platform": {
+            "php": "5.5"
+        }
+    },
     "homepage": "http://github.com/auth0/jwt-auth-bundle",
     "license": "MIT",
-
     "authors": [
         {
             "name": "Germán Lena",
@@ -22,20 +26,17 @@
             "email": "josh.cunningham@auth0.com"
         }
     ],
-
     "require": {
         "php": "^5.5 || ^7.0",
         "symfony/framework-bundle": "^2.8 || ~3.0 || ~4.0 || ~5.0",
         "auth0/auth0-php": "^5.2"
     },
-
     "require-dev": {
         "phpunit/phpunit": "^4.8.36 || ^5.7.21",
         "nyholm/symfony-bundle-test": "^1.0.2",
         "symfony/framework-bundle": "^2.8 || ~3.3.0",
         "symfony/security": "^2.8 || ~3.3.0"
     },
-
     "autoload": {
         "psr-4": {
             "Auth0\\JWTAuthBundle\\": "src/"
