--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,14 @@
         }
     ],
     "require": {
-        "php": "^5.5 || ^7.0",
-        "symfony/framework-bundle": "^2.8 || ~3.0 || ~4.0 || ~5.0",
+        "php": "^7.3",
+        "symfony/framework-bundle": "^4.4 || ~5.1",
         "auth0/auth0-php": "^5.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.36 || ^5.7.21",
+        "phpunit/phpunit": "^9.3",
         "nyholm/symfony-bundle-test": "^1.0.2",
-        "symfony/framework-bundle": "^2.8 || ~3.3.0",
-        "symfony/security": "^2.8 || ~3.3.0"
+        "symfony/security": "^4.4 || ~5.1"
     },
     "autoload": {
         "psr-4": {
