--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 | ^8.0",
         "symfony/framework-bundle": "^4.4 || ~5.1",
         "auth0/auth0-php": "^7.6"
     },
