--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,60 @@
 {
-    "name": "auth0/jwt-auth-bundle",
-    "type": "symfony-bundle",
-    "description": "Support for authenticating users with a JWT in Symfony.",
-    "keywords": [
-        "authentication",
-        "firewall",
-        "jwt",
-        "security",
-        "auth0"
-    ],
-    "homepage": "http://github.com/auth0/jwt-auth-bundle",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Germán Lena",
-            "email": "german@auth0.com"
-        },
-        {
-            "name": "Josh Cunningham",
-            "email": "josh.cunningham@auth0.com"
-        }
-    ],
-    "require": {
-        "php": "^7.3 | ^8.0",
-        "symfony/framework-bundle": "^4.4 || ~5.1",
-        "auth0/auth0-php": "^7.6"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "nyholm/symfony-bundle-test": "^1.0.2",
-        "symfony/security": "^4.4 || ~5.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "Auth0\\JWTAuthBundle\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Auth0\\JWTAuthBundle\\": "Tests/"
-        }
+  "name": "auth0/jwt-auth-bundle",
+  "type": "symfony-bundle",
+  "description": "Support for authenticating users with a JWT in Symfony.",
+  "keywords": [
+    "authentication",
+    "firewall",
+    "jwt",
+    "security",
+    "auth0"
+  ],
+  "homepage": "http://github.com/auth0/jwt-auth-bundle",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Auth0",
+      "email": "support@auth0.com",
+      "homepage": "http://www.auth0.com/"
     }
+  ],
+  "require": {
+    "php": "^7.3 | ^8.0",
+    "symfony/framework-bundle": "^4.4 || ~5.1",
+    "auth0/auth0-php": "^7.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.3",
+    "nyholm/symfony-bundle-test": "^1.0.2",
+    "symfony/security": "^4.4 || ~5.1",
+    "squizlabs/php_codesniffer": "^3.2",
+    "phpcompatibility/php-compatibility": "^8.1",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+    "phpstan/phpstan": "^0.12.64"
+  },
+  "scripts": {
+    "test": "SHELL_INTERACTIVE=1 \"./vendor/bin/phpunit\" --coverage-text ",
+    "analyze": "@php ./vendor/bin/phpstan analyze",
+    "compat": "@php ./vendor/bin/phpcs --standard=.phpcs-compat.xml.dist",
+    "format": "@php ./vendor/bin/phpcbf",
+    "lint": "@php ./vendor/bin/phpcs",
+    "sniffs": "@php ./vendor/bin/phpcs -e",
+    "config-phpcs": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
+    "pre-commit": [
+      "@analyze",
+      "@test",
+      "@format",
+      "@compat"
+    ]
+  },
+  "autoload": {
+    "psr-4": {
+      "Auth0\\JWTAuthBundle\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Auth0\\JWTAuthBundle\\": "Tests/"
+    }
+  }
 }
