--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,14 @@ commands:
 
 jobs:
   php_7_3:
-    docker: 
+    docker:
       - image: circleci/php:7.3
     steps:
       - prepare
       - run-unit-tests
+      - run:
+          command: bash <(curl -s https://codecov.io/bash)
+          when: on_success
   php_7_4:
     docker:
       - image: circleci/php:7.4
@@ -47,4 +50,3 @@ workflows:
       - php_7_3
       - php_7_4
       - php_8_0
-
