--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,15 @@ commands:
           key: composer-v1-{{ .Environment.CIRCLE_JOB }}-{{ checksum "composer.lock" }}
           paths:
             - vendor
+  run-php-compatibility:
+    steps:
+      - run: composer compat
   run-static-analysis:
     steps:
       - run: composer analyze
   run-unit-tests:
     steps:
-      - run: composer test-unit-ci
+      - run: composer test
       - store_artifacts:
           path: build/coverage.xml
 
@@ -36,6 +39,7 @@ jobs:
       - image: circleci/php:7.3
     steps:
       - prepare
+      - run-php-compatibility
       - run-unit-tests
       - run:
           command: bash <(curl -s https://codecov.io/bash)
@@ -73,7 +77,6 @@ jobs:
             fi
           when: always
 
-#Each workflow represents a Github check
 workflows:
   build-and-test:
     jobs:
@@ -81,7 +84,6 @@ workflows:
       - php_7_4
       - php_8_0
       - snyk:
-          # Must define SNYK_TOKEN env
           context: snyk-env
           requires:
             - php_7_3
