tests: Add Mockery dev dependency

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
     "phpstan/phpstan": "^0.12.64",
     "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan-symfony": "^0.12.20"
+    "phpstan/phpstan-symfony": "^0.12.20",
+    "mockery/mockery": "^1.4"
   },
   "scripts": {
     "test": "SHELL_INTERACTIVE=1 \"./vendor/bin/phpunit\" --coverage-text ",
