feat: Allow defining azp, aud, leeway and max_age jwt validators in config

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -9,6 +9,7 @@ services:
         "%jwt_auth.audience%",
         "%jwt_auth.authorized_issuer%",
         "%jwt_auth.algorithm%",
+        "%jwt_auth.validations%",
         ~,
       ]
 
