--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.3",
     "nyholm/symfony-bundle-test": "^1.0.2",
-    "symfony/security": "^4.4 || ~5.1",
+    "symfony/security-http": "^4.4 || ^5.1",
     "squizlabs/php_codesniffer": "^3.2",
     "phpcompatibility/php-compatibility": "^8.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
