--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,3 @@
 # Composer Lock file
-!composer.lock
-
-# Cache and logs (Symfony2)
-/example/app/cache/*
-/example/app/logs/*
-!example/app/cache/.gitkeep
-!example/app/logs/.gitkeep
-
-# Cache and logs (Symfony3)
-/example/var/cache/*
-/example/var/logs/*
-!example/var/cache/.gitkeep
-!example/var/logs/.gitkeep
-
-# Parameters
-/example/app/config/parameters.yml
-/example/app/config/parameters.ini
-
-# Managed by Composer
-/example/app/bootstrap.php.cache
-/example/var/bootstrap.php.cache
-/example/bin/*
-!example/bin/console
-!example/bin/symfony_requirements
-/example/vendor/
-/vendor/
-
-# Assets and user uploads
-/example/web/bundles/
-/example/web/uploads/
-
-# PHPUnit
-/example/app/phpunit.xml
-/example/phpunit.xml
-
-# Composer PHAR
-/example/composer.phar
-
-**/.DS_Store
-.phpunit.result.cache
+composer.lock
+vendor/
