--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,7 +7,7 @@
   </coverage>
   <testsuites>
     <testsuite name="unit">
-      <directory>tests/Unit</directory>
+      <directory>./tests/</directory>
     </testsuite>
   </testsuites>
   <php>
