added the injected arguments for auth0 service in JwtUserProvider

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -23,3 +23,5 @@ services:
 
   jwt_auth.security.user.jwt_user_provider:
     class: Auth0\JWTAuthBundle\Security\User\JwtUserProvider
+    arguments:
+      - "@jwt_auth.auth0_service"
