--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,25 @@
 {
-  "name": "auth0/jwt-auth-bundle",
-  "type": "symfony-bundle",
-  "description": "Support for authenticating users with a JWT in Symfony.",
-  "keywords": [
-    "authentication",
-    "firewall",
-    "jwt",
-    "security",
-    "auth0"
-  ],
-  "homepage": "http://github.com/auth0/jwt-auth-bundle",
+  "name": "auth0/symfony",
+  "description": "Symfony SDK for Auth0 Authentication and Management APIs.",
   "license": "MIT",
+  "type": "symfony-bundle",
+  "keywords": [
+    "symfony",
+    "auth0",
+    "authentication",
+    "authorization",
+    "login",
+    "auth",
+    "jwt",
+    "json web token",
+    "jwk",
+    "json web key",
+    "oauth",
+    "openid",
+    "secure",
+    "protect",
+    "api"
+  ],
   "authors": [
     {
       "name": "Auth0",
@@ -18,55 +27,50 @@
       "homepage": "https://auth0.com/"
     }
   ],
+  "homepage": "https://github.com/auth0/jwt-auth-bundle",
   "require": {
-    "php": "^7.3 | ^8.0",
-    "symfony/framework-bundle": "^4.4 || ~5.1",
-    "auth0/auth0-php": "^7.6"
+    "php": "^8.0",
+    "symfony/framework-bundle": "^6.0",
+    "auth0/auth0-php": "^8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.3",
-    "nyholm/symfony-bundle-test": "^1.0.2",
-    "symfony/security": "^4.4 || ~5.1",
-    "squizlabs/php_codesniffer": "^3.2",
-    "phpcompatibility/php-compatibility": "^8.1",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-    "phpstan/phpstan": "^0.12.64",
-    "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan-symfony": "^0.12.20",
-    "mockery/mockery": "^1.4"
-  },
-  "scripts": {
-    "test": "SHELL_INTERACTIVE=1 \"./vendor/bin/phpunit\" --coverage-text ",
-    "test-unit-ci": "\"vendor/bin/phpunit\" --stop-on-failure --coverage-clover=build/coverage.xml",
-    "analyze": "@php ./vendor/bin/phpstan analyze",
-    "compat": "@php ./vendor/bin/phpcs --standard=.phpcs-compat.xml.dist",
-    "format": "@php ./vendor/bin/phpcbf",
-    "lint": "@php ./vendor/bin/phpcs",
-    "sniffs": "@php ./vendor/bin/phpcs -e",
-    "config-phpcs": "Dealerdirect\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run",
-    "pre-commit": [
-      "@analyze",
-      "@test",
-      "@format",
-      "@compat"
-    ]
+    "firebase/php-jwt": "^6.3",
+    "hyperf/event": "^2.2",
+    "laravel/pint": "^1.2",
+    "mockery/mockery": "^1.5",
+    "nyholm/psr7": "^1.5",
+    "pestphp/pest": "^1.21",
+    "php-http/mock-client": "^1.5",
+    "phpstan/phpstan": "^1.9",
+    "phpstan/phpstan-strict-rules": "^1.4.4",
+    "phpunit/phpunit": "^9.5",
+    "rector/rector": "^0.14.7",
+    "squizlabs/php_codesniffer": "^3.7",
+    "symfony/cache": "^4.4 || ^5.4 || ^6.1",
+    "vimeo/psalm": "^4.30",
+    "wikimedia/composer-merge-plugin": "^2.0"
   },
   "autoload": {
     "psr-4": {
-      "Auth0\\JWTAuthBundle\\": "src/"
+      "Auth0\\Symfony\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Auth0\\JWTAuthBundle\\": "Tests/"
+      "Auth0\\Tests\\": "tests/"
     }
   },
   "config": {
-    "optimize-autoloader": true,
-    "sort-packages": true,
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true,
+      "pestphp/pest-plugin": true,
+      "ergebnis/composer-normalize": true,
+      "wikimedia/composer-merge-plugin": true,
+      "symfony/flex": true,
       "phpstan/extension-installer": true
-    }
-  }
+    },
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "prefer-stable": true
 }
