feat(SDK-4733): Implement support for Back-Channel Logout

--- a/example/config/packages/cache.yaml
+++ b/example/config/packages/cache.yaml
@@ -20,3 +20,4 @@ framework:
     pools:
       auth0_token_cache: { adapter: cache.adapter.redis }
       auth0_management_token_cache: { adapter: cache.adapter.redis }
+      auth0_bachannel_logout_cache: { adapter: cache.adapter.redis }
